--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -91,7 +91,7 @@
 	
 <div class="container mt-3">
     <div class="d-grid">
-    <button type="button" class="btn btn-secondary btn-block">How To Support The Vision</button>
+    <button type="button" class="btn btn-secondary btn-block">How To Travel The Galaxy The Right Way</button>
   </div>
 </div>
 
@@ -103,12 +103,12 @@
   <div class="card">
     <div class="card-header">
       <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
-        Strategy #1
+        Step #1
       </a>
     </div>
     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
       <div class="card-body">
-        Meals on Wheels relies on 225 volunteers who deliver over 56,000 meals a year to our clients. The impact they are making in the lives of those they serve is immeasurable. <img src="https://www.pngitem.com/pimgs/m/211-2117368_volunteer-clipart-hd-png-download.png" alt="..." class="img-fluid">
+		Decide where you want to travel in the galaxy
       </div>
     </div>
   </div>
@@ -116,12 +116,12 @@
   <div class="card">
     <div class="card-header">
       <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
-        Strategy #2
+        Step #2
       </a>
     </div>
     <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        Donate your car, van and truck to Meals on Wheels through our partnership with Cars Inc. <img src="https://lh3.googleusercontent.com/proxy/9_xQgY43TANL59gHg-bIMiPDKdBv7MeJkQRJtITZHl8wqL4mgeyzcAMtnDqsFt9P3H67BsM1QAb39_yXDw0-16_RQT4GJiLz2rQqjHWlcwLO-Woptua4MPaFIwYEMLH2U3hdr2ktiGo00tVzH_FuWDiUl6rke87vFPyYccGWTw" alt="..." class="img-fluid">
+ 		schedule an online White through our website.
       </div>
     </div>
   </div>
@@ -129,12 +129,12 @@
   <div class="card">
     <div class="card-header">
       <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
-        Strategy #3
+        Step #3
       </a>
     </div>
     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        You can support us without any expense to you by selecting Meals on Wheels when you shop at Amazon.com and King Soopers.  Here’s how.<img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="..." class="img-fluid">
+ 		climb aboard the Millennium Falcon and jump into hyperspace with us!
       </div>
     </div>
   </div>
