--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -109,6 +109,7 @@
     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
       <div class="card-body">
 		Decide where you want to travel in the galaxy
+	            <img class="fluid" src="https://2.bp.blogspot.com/-tlXi3o-jEPg/UTaApVFEvrI/AAAAAAAANdA/pN5SLoDVOUI/s640/Han-Chewie-and-the-Falcon-hyperspace.jpg" alt="Chicago" >
       </div>
     </div>
   </div>
@@ -122,6 +123,8 @@
     <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
  		schedule an online White through our website.
+	      	            <img class="fluid" src="https://2.bp.blogspot.com/-tlXi3o-jEPg/UTaApVFEvrI/AAAAAAAANdA/pN5SLoDVOUI/s640/Han-Chewie-and-the-Falcon-hyperspace.jpg" alt="Chicago" >
+
       </div>
     </div>
   </div>
@@ -135,6 +138,8 @@
     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
  		climb aboard the Millennium Falcon and jump into hyperspace with us!
+	      	            <img class="fluid" src="https://2.bp.blogspot.com/-tlXi3o-jEPg/UTaApVFEvrI/AAAAAAAANdA/pN5SLoDVOUI/s640/Han-Chewie-and-the-Falcon-hyperspace.jpg" alt="Chicago" >
+
       </div>
     </div>
   </div>
