--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -138,7 +138,7 @@
     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
  		climb aboard the Millennium Falcon and jump into hyperspace with us!
-	      	            <img class="fluid" src="https://2.bp.blogspot.com/-tlXi3o-jEPg/UTaApVFEvrI/AAAAAAAANdA/pN5SLoDVOUI/s640/Han-Chewie-and-the-Falcon-hyperspace.jpg" alt="Chicago" >
+	      	            <img class="fluid" src="https://ca-times.brightspotcdn.com/dims4/default/89aa3db/2147483647/strip/true/crop/1600x900+0+0/resize/840x473!/quality/90/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Ffc%2F93%2Fe522c70486d4603c375020d22862%2Fla-1548705615-s7k701acvv-snap-image" alt="Chicago" >
 
       </div>
     </div>
