--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -10,26 +10,28 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark text-light">
-        <div class="container">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="card.html">Welcome</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="carousel.html">Serivices</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="accordion.html">Support MOW</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="tabs.html">About Us</a>
-                </li>               
-            </ul>
-
-        </div>
-    </nav>
-
+   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
+    <img class="img-fluid" src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" alt="Bear" width="50" height="75">    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+        </li>    
+      </ul>
+    </div>
+  </div>
+</nav>    
     
     
      <div class="container-fluid p-5 bg-success text-white text-center">
