--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -34,7 +34,7 @@
 </nav>    
     
     
-     <div class="container-fluid p-5 bg-success text-white text-center">
+     <div class="container-fluid p-5 bg-warning text-black text-center">
         <a href="index.html" class="text-white">
             <h1> Solo & Chewy Expeditions!</h1>
         </a>
