--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -60,6 +60,11 @@
     <div class="carousel-item">
       <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" class="d-block w-100">
     </div>
+  	<div class="carousel-caption">
+   		 <h3>Los Angeles</h3>
+   			 <p>We had such a great time in LA!</p>
+  </div>
+</div>
     <div class="carousel-item">
       <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="New York" class="d-block w-100">
     </div>
