--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -68,8 +68,8 @@
 </div>
 	
 	
-	
-    <div class="carousel-item">
+	<div class="carousel-inner">
+    		<div class="carousel-item active">
       <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" class="d-block w-100">
     
 </div>
