--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -59,7 +59,12 @@
 <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="Los Angeles" class="d-block w-100">
+   	<div class="carousel-caption">
+        <h1>Tatooine</h1>
+        <p>Thank you, Chicago!</p>
+      </div> 
     </div>
+	</div>
     <div class="carousel-item">
       <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" class="d-block w-100">
     </div>
