--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -58,7 +58,7 @@
     <div class="carousel-item active">
       <img src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" alt="Los Angeles" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Los Angeles</h3>
+        <h3>Tatooine</h3>
         <p>We had such a great time in LA!</p>
       </div>
     </div>
