--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -115,7 +115,7 @@
 	
 <div class="container mt-3">
     <div class="d-grid">
-    <button type="button" class="btn btn-secondary btn-block">How To Travel The Galaxy The Right Way</button>
+    <button type="button" class="btn btn-warning btn-block">How To Travel The Galaxy The Right Way</button>
   </div>
 </div>
 
@@ -223,10 +223,9 @@
    
 
 <div class="container">
-  <footer class="py-3 my-4">
+  <footer class="py-3 my-4" class="warning">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Volunteer</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Location</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
