--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://cdn.domestika.org/c_fit,dpr_auto,f_auto,t_base_params,w_820/v1588493873/content-items/004/425/698/MattePainting_StarWars-original.png?1588493873" alt="Chicago" class="d-block" style="width:100%">
+      <img src="https://wallpaperaccess.com/full/503732.jpg" alt="Chicago" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Hoth</h3>
         <p>Too cold, but if you want to!</p>
@@ -223,7 +223,7 @@
    
 
 <div class="container">
-  <footer class="py-3 my-4" class="warning">
+  <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Location</a></li>
