--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -33,7 +33,10 @@
   </div>
 </nav>    
     
-    
+<div class="alert alert-danger">
+  <strong>UPDATE!</strong>All flights to Alderaan have been CANCELLED!!!
+</div>
+	
      <div class="container-fluid p-5 bg-warning text-black text-center">
         <a href="index.html" class="text-white">
             <h1> Solo & Chewy Expeditions!</h1>
