--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -37,6 +37,8 @@
   <strong>UPDATE!</strong>All flights to Alderaan have been CANCELLED!!!
 </div>
 	
+<button type="button" class="btn btn-black btn-lg btn-block">SCHEDULE A TRIP</button>	
+	
      <div class="container-fluid p-5 bg-warning text-black text-center">
         <a href="index.html" class="text-white">
             <h1> Solo & Chewy Expeditions!</h1>
