--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -107,6 +107,9 @@
 <br>
 <br>
 
+	
+	
+	
  <div class="mt-4 p-5 bg-secondary text-white rounded">
   <h1>Our Destinations</h1>
 <br>
@@ -126,7 +129,21 @@
 
 <br>
 <br>
-     
+
+<div class="jumbotron">
+  <h1 class="display-4">Our Destinations</h1>
+  <p class="lead">Polis Masa, Geonosis, Mustafar, Naboo, Alderann, Courescant, Eden Prime, Rakata, Hoth, Dagobah, Yavin, Kamino Crait, Kashyyyk, Endor.</p>
+  <hr class="my-4">
+  <p>SCHEDULE A TRIP</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://adamschott.github.io/bacs200/travel/buy.html" role="button">Learn more</a>
+  </p>
+</div>	
+	
+	
+	
+	
+	
      <div id="accordion">
 
   <div class="card">
