--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -116,6 +116,7 @@
 <br>
 
   <p>" Polis Masa, Geonosis, Mustafar, Naboo, Alderann, Courescant, Eden Prime, Rakata, Hoth, Dagobah, Yavin, Kamino Crait, Kashyyyk, Endor"</p>
+	     <a class="btn btn-primary btn-lg" href="https://adamschott.github.io/bacs200/travel/buy.html" role="button">Pricing</a>
 </div>
 	
 <br>
