--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -36,9 +36,7 @@
 <div class="alert alert-danger">
   <strong>UPDATE!</strong>All flights to Alderaan have been CANCELLED!!!
 </div>
-	
-<button type="button" class="btn btn-black btn-lg btn-block">SCHEDULE A TRIP</button>	
-	
+		
      <div class="container-fluid p-5 bg-warning text-black text-center">
         <a href="index.html" class="text-white">
             <h1> Solo & Chewy Expeditions!</h1>
@@ -161,7 +159,7 @@
  		schedule an online White through our website.
 <br>	 
 <br>	      	            
-	      <img class="fluid" src="https://static.wikia.nocookie.net/starwars/images/5/52/Millennium_Falcon_Fathead_TROS.png/revision/latest?cb=20200101200230" alt="Chicago" >
+	      <img class="fluid" src="https://bbts1.azureedge.net/images/p/full/2017/11/96ccd4dd-4418-4777-a941-1d82f60813ed.jpg" alt="Chicago" >
 
       </div>
     </div>
