--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -125,7 +125,7 @@
               <li>Free Wifi</li>
               <li>Guranteed Blaster Fire</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+            <button type="button" class="w-100 btn btn-lg btn-primary">Yahooooo!!!</button>
           </div>
         </div>
       </div>
