--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -72,7 +72,7 @@
 
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
       <h1 class="display-4 fw-normal">Pricing</h1>
-      <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+      <p class="fs-5 text-muted"> Let's see how cheap you are?! We're the best team in the entire galaxy, so you are gonna have to pay up. Not to mention that I owe Jabb some credits so pleas choose wisely.</p>
     </div>
   </header>
 
