--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -62,13 +62,28 @@
         <span class="fs-4">Pricing example</span>
       </a>
 
-      <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 text-dark text-decoration-none" href="#">Features</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="#">Kessel Run 12 Parsecs</a>
-        <a class="me-3 py-2 text-dark text-decoration-none" href="#">Support</a>
-        <a class="py-2 text-dark text-decoration-none" href="#">Pricing</a>
-      </nav>
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
+    <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Rebel_Alliance_logo.svg/1200px-Rebel_Alliance_logo.svg.png" alt="Bear" width="50" height="75">    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+        </li>    
+      </ul>
     </div>
+  </div>
+</nav>    
 
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
       <h1 class="display-4 fw-normal">Pricing</h1>
