--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -72,10 +72,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Pricing</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
@@ -84,7 +84,6 @@
     </div>
   </div>
 </nav>    
-
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
       <h1 class="display-4 fw-normal">Pricing</h1>
       <p class="fs-5 text-muted"> Let's see how cheap you are?! We're the best team in the entire galaxy, so you are gonna have to pay up. Not to mention that I owe Jabb some credits so pleas choose wisely.</p>
