--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -38,7 +38,7 @@
 </div>
 		
      <div class="container-fluid p-5 bg-warning text-black text-center">
-        <a href="index.html" class="text-white">
+        <a href="https://adamschott.github.io/bacs200/travel/buy.html" class="text-white">
             <h1> Solo & Chewy Expeditions!</h1>
         </a>
         <p>Want to travel the galaxy with the best pilots in the whole galaxy? Then book a flight with us today!</p>
