--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+   <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
     <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Rebel_Alliance_logo.svg/1200px-Rebel_Alliance_logo.svg.png" alt="Bear" width="50" height="75">    
