--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -115,13 +115,13 @@
               <li>Jedi Mind Tricks</li>
               <li>Guranteed Blaster Fire</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+            <button type="button" class="w-100 btn btn-lg btn-warning">Get started</button>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm border-primary">
-          <div class="card-header py-3 text-white bg-primary border-primary">
+          <div class="card-header py-3 text-white bg-warning border-primary">
             <h4 class="my-0 fw-normal">Kessel Run</h4>
           </div>
           <div class="card-body">
@@ -132,7 +132,7 @@
               <li>Free Wifi</li>
               <li>Guranteed Blaster Fire</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Yahooooo!!!</button>
+            <button type="button" class="w-100 btn btn-lg btn-warning">Yahooooo!!!</button>
           </div>
         </div>
       </div>
