--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -89,6 +89,7 @@
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Entry</h4>
+            		      <img src="https://www.shortlist.com/media/imager/202103/51799-posts.facebook_lg.jpg" alt="Los Angeles" height="50" width="50">
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$500<small class="text-muted fw-light">/mo</small></h1>
@@ -106,6 +107,8 @@
         <div class="card mb-4 rounded-3 shadow-sm">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Pro</h4>
+                        		      <img src="https://www.shortlist.com/media/imager/202103/51799-posts.facebook_lg.jpg" alt="Los Angeles" height="50" width="50">
+
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$1500<small class="text-muted fw-light">/mo</small></h1>
@@ -123,6 +126,8 @@
         <div class="card mb-4 rounded-3 shadow-sm border-primary">
           <div class="card-header py-3 text-white bg-warning border-primary">
             <h4 class="my-0 fw-normal">Kessel Run</h4>
+                        		      <img src="https://www.shortlist.com/media/imager/202103/51799-posts.facebook_lg.jpg" alt="Los Angeles" height="50" width="50">
+
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$10,000<small class="text-muted fw-light">/mo</small></h1>
