--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Pricing</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/buy.html">Pricing</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
