--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -68,7 +68,7 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Pricing (Includes All Locations)</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/buy.html">Pricing (Includes All Locations)</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
