--- a/bacs200/travel/buy.html
+++ b/bacs200/travel/buy.html
@@ -68,7 +68,7 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/buy.html">Pricing (Includes All Locations)</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/travel/buy.html">Pricing</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
@@ -78,7 +78,7 @@
   </div>
 </nav>    
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-      <h1 class="display-4 fw-normal">Pricing</h1>
+      <h1 class="display-4 fw-normal">Pricing (Includes All Locations)</h1>
       <p class="fs-5 text-muted"> Let's see how cheap you are?! We're the best team in the entire galaxy, so you are gonna have to pay up. Not to mention that I owe Jabb some credits so pleas choose wisely.</p>
     </div>
   </header>
