--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -144,7 +144,7 @@
 		Decide where you want to travel in the galaxy
 <br>	 
 <br>	          
-	      <img class="fluid" src="https://2.bp.blogspot.com/-tlXi3o-jEPg/UTaApVFEvrI/AAAAAAAANdA/pN5SLoDVOUI/s640/Han-Chewie-and-the-Falcon-hyperspace.jpg" alt="Chicago" >
+	      <img class="fluid" src="https://c.tenor.com/h5r89kKK1PcAAAAM/star-wars-hyperspeed.gif" alt="Chicago" >
       </div>
     </div>
   </div>
