--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -53,7 +53,7 @@
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">Script</h5>
+    <h5 class="card-title">  </h5>
     <p class="card-text">
 	    
 	  
