--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -46,7 +46,10 @@
 <br>
 <br>  
   
-	
+         
+   <h1>Adam Schott</h1>    
+<br>
+    <h2>    <img src="adamschott.jpg" alt="Adam Schott" width="200" height="250"></h2>	
 
 <div class="card">
   <div class="card-header">
