--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -47,7 +47,7 @@
          
    <h2>Adam Schott</h2>    
 <br>
-    <h2>    <img src="adamschott.jpg" alt="Adam Schott" width="300" height="350"></h2>	
+    <h2>    <img src="adamschott.jpg" alt="Adam Schott" class="mx-auto d-block" width="300" height="350"></h2>	
 
 <br>	
 	
