--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -48,7 +48,7 @@
 	
 <div class="card">
   <div class="card-header">
-    Featured
+    What you can do for a prospective company:
   </div>
   <div class="card-body">
     <h5 class="card-title">  </h5>
