--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -45,10 +45,26 @@
     <h2>    <img src="adamschott.jpg" alt="Adam Schott" class="mx-auto d-block" width="300" height="350"></h2>	
 
 <br>	
+
+	
+	
+	
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>	
+
+	
+	
+	
 	
 <div class="card">
   <div class="card-header">
-    What you can do for a prospective company:
+    What I can do for a prospective company:
   </div>
   <div class="card-body">
     <h5 class="card-title">  </h5>
