--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -49,12 +49,7 @@
 	
 	
 	
-<div class="card" style="width: 18rem;">
-   <iframe width="1214" height="683" src="https://www.youtube.com/embed/8jPQjjsBbIc" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-  </div>
-</div>	
+<iframe width="640" height="360" src="https://www.youtube.com/embed/h8lQihRotLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 	
 	
