--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -128,6 +128,24 @@
   </div>
 </div>	
 	
+	
+	
+ <h1>Adam Schott</h1>
+    <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo. <p> class="mx-auto d-block"
+    
+<br>
+    <h2>    <img src="adamschott.jpg" class="mx-auto d-block" alt="Adam Schott" width="200" height="250"></h2>
+
+
+    <h2>Adam's Special Interests</h2>
+<ul>
+    <li>Gardening and Landscaping
+    <li>Playing Old Man's Basketball Every Thursday
+    <li>Hiking and Climbing Big Mountains
+    <li>Graduating from the University of Northern Colorado
+</ul>        	
+	
+	
      <footer class="text-center m-5">
         &copy;2021 <a href="https://shrinking-world.com">Shrinking World</a>
         - Practical Software Engineering
