--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -130,12 +130,14 @@
 </div>	
 	
 	
-	
+<Br>
+<Br>
+<Br>		
  <h1>Adam Schott</h1>
-    <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo. <p> class="mx-auto d-block"
+    <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo. <p>
     
 <br>
-    <h2>    <img src="adamschott.jpg" class="mx-auto d-block" alt="Adam Schott" width="200" height="250"></h2>
+    <h2>    <img src="adamschott.jpg" alt="Adam Schott" width="200" height="250"></h2>
 
 
     <h2>Adam's Special Interests</h2>
