--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -127,7 +127,7 @@
 	
     <a href="https://www.canva.com/design/DAEBn5UlALM/share/preview?token=YmB_zpW6Cajxa1t9cZ-nvA&role=EDITOR&utm_content=DAEBn5UlALM&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" class="btn btn-primary">RESUME</a>
 </div>	
-	
+</div>	
 	
 <Br>
 <Br>
