--- a/bacs200/video.html
+++ b/bacs200/video.html
@@ -56,7 +56,7 @@
     What I can do for a prospective company:
   </div>
   <div class="card-body">
-    <h5 class="card-title"></h5>
+    <h5 class="card-title"</h5>
     <p class="card-text">
 	   	  
 	 
