--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -76,6 +76,10 @@
         <li>Week 8 - <a href="blog.html">Project 8 - Business Blog</a> </li>
         <li>Week 9 - <a href="nonprofit.html ">Project 9 - Non-profit Blog</a> </li>
         <li>Week 10 - <a href="portfolio.html ">Project 10 - Portfolio</a> </li>
+        <li>Week 11 - <a href="https://adamschott.github.io/bacs200/travel/">Project 11 - Travel Brochure</a> </li>
+        <li>Week 11 - <a href="video.html">Project 12 - Proffesional Video</a> </li>
+
+
     </ul>
     <a href="/demo">Weekly Code Demos</a>
 </body>
