--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Blog on Climate Change</title>
+  <title>Web Development Trends</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
     </div>
   
   
-<h1 class="container-fluid bg-dark text-white text-center">Is climate change the sink or swim we think it is?</h1>
+<h1 class="container-fluid bg-dark text-white text-center">Web Development Trends in the Modern Era</h1>
 <br>
 <br>
 <br>
@@ -53,8 +53,8 @@
         <div class="row">
 
            <div class="alert alert-primary" role="alert">
-                <h3>PROS</h3>
-                <p>Part of the economic implications of climate change is that if the Earth were to be changing its overall temperature, then the economics of all major countries in the world would be affected by their dependability on natural resources. For example many fishermen and Farmers depend on the production of fishing and produce based on the seasonal patterns of the Earth's weather. If these patterns are disrupted anyway, then seasonal rains  may not be present in order to raise crops and livestock. Cities such as New Orleans as well, which sits below sea level in some areas, runs the risk of flooding and costly damage to its City. This takes a huge economical burden on cities to repair.
+                <h3>Artificial Intelligence Chatbots</h3>
+                <p>One particular web development trend that is really interesting to analyze is the concept of chatbots. Essentially a chatbot is an artificial intelligence interaction between a person using the internet and the company whomever is responsible for interacting with that person. For example if a person is trying to purchase something on the Internet and they need help, they would ask for help in the chat section which is where the chat would come into play. Thischatbot is not an actual person, but is an artificial representation that can help answer questions and lead a person to make a decision. I have had experience using chatbots online and it is really interesting because they actually do a pretty good job at getting you what you need. Personally I like the personal interaction with a person, but I definitely don't mind using them if it's just a simple quick question that I need answered. Normal concerns with chatbots is that this is going to take away jobs from people and potentially allow for misinformation from the chatbots to be ineffective. Although this is true to a certain extent, I think the benefits potentially outweigh the cons in this case. Website developers are simply trying to make the best product they can for the most reasonable price they can, and allowing these chat bot to interact with customers as a way to improve the overall customer experience. At the end of the day a customer just wants to purchase something that they need and isn’t always concerned with the means in which they get it.
 </p>
             </div>
            
