--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -104,11 +104,27 @@
 <br>
 <br>  
   
-<h1 class="container-fluid p-5 bg-dark text-white text-center">Final Thoughts?</h1>
+<h1 class="container-fluid p-5 bg-dark text-white text-center">About The Author</h1>
 <br>   
 <br>
 
-
+<body>
+    <h1>Adam Schott</h1>
+    <p>My name is Adam Schott. I am a Senior Marketing Major at UNCo.<p>
+<b>
+</body>
+    
+<b>
+    <h2>    <img src="adamschott.jpg" alt="Adam Schott" width="200" height="250"></h2>
+</html>
+<b>
+<b>
+    <h2>Adam's Special Interests</h2>
+<ul>
+    <li>Gardening and Landscaping
+    <li>Playing Old Man's Basketball Every Thursday
+    <li>Hiking and Climbing Big Mountains
+    <li>Graduating from the University of Northern Colorado
             
 <br>
 <br>  
