--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -177,7 +177,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">adamschott.com</a>
+    <a class="text-white" href="https://adamschott.github.io/bacs200/index.html">adamschott.com</a>
   </div>
   <!-- Copyright -->
 </footer>                
