--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -132,7 +132,7 @@
 <br>
 <br>  
         
-<footer class="bg-gray text-center text-white">
+<footer class="bg-dark text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Form -->
