--- a/bacs200/profile.html
+++ b/bacs200/profile.html
@@ -19,8 +19,14 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/index.html?">Home</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
+        </li>    
         <li class="nav-item">
           <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
         </li>
