--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/trends.html">Trends</a>
         </li>    
       </ul>
     </div>
