--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/index.html?">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/profile.html">Profile</a>
         </li>
           <li class="nav-item">
           <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
