--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -25,10 +25,10 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/profile.html">Profile</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/inspireme.html">Feel Inspired!</a>
         </li>    
         <li class="nav-item">
-          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/trends.html">Trends</a>
