--- a/bacs200/trends/index.html
+++ b/bacs200/trends/index.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/profile.html">Profile</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
+        </li>
           <li class="nav-item">
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/inspireme.html">Feel Inspired!</a>
         </li>    
