--- a/bacs200/trends/inspireme.html
+++ b/bacs200/trends/inspireme.html
@@ -19,18 +19,27 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/index.html?">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/profile.html">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+          <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/inspireme.html">Feel Inspired!</a>
+        </li>    
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/trends.html">Trends</a>
         </li>    
       </ul>
     </div>
   </div>
-</nav>    
+</nav>
         
     
 <i class="fa-solid fa-book-open-cover"></i>
