--- a/bacs200/trends/trends.html
+++ b/bacs200/trends/trends.html
@@ -22,22 +22,24 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/index.html?">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/adam-schott-55068b1ab/">LinkedIn</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/inspireme.html">Feel Inspired!</a>
         </li>    
         <li class="nav-item">
-          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/trends.html">Trends</a>
         </li>    
       </ul>
     </div>
   </div>
 </nav>
-
     <div class="container-fluid p-5 bg-primary text-white text-center">
         <a href="index.html" class="text-white">
             <h1> Adam R. Schott's Blog</h1>
