--- a/bacs200/trends/inspireme.html
+++ b/bacs200/trends/inspireme.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/trends.html">Trends</a>
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/trends/trends.html">Featured</a>
         </li>    
       </ul>
     </div>
