--- a/bacs200/trends/portfolio.html
+++ b/bacs200/trends/portfolio.html
@@ -70,7 +70,8 @@
     </ul>
 </body>
     
-    <footer> class="bg-dark text-center text-white">
+    <footer>                
+ class="bg-dark text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Form -->
@@ -104,8 +105,7 @@
           <!--Grid column-->
         </div>
         <!--Grid row-->
-      </form>
-    </section>
+     
     <!-- Section: Form -->
   </div>
   <!-- Grid container -->
