--- a/bacs200/trends/profile.html
+++ b/bacs200/trends/profile.html
@@ -55,7 +55,8 @@
     <li>Playing Old Man's Basketball Every Thursday
     <li>Hiking and Climbing Big Mountains
     <li>Graduating from the University of Northern Colorado
-<footer class="bg-dark text-center text-white">
+
+<footer> class="bg-dark text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Form -->
