--- a/bacs200/trends/portfolio.html
+++ b/bacs200/trends/portfolio.html
@@ -68,9 +68,7 @@
         <li>Week 9 - <a href="nonprofit.html ">Project 9 - Non-profit Blog</a> </li>
         <li>Week 10 - <a href="portfolio.html ">Project 10 - Portfolio</a> </li>
     </ul>
-</body> 
-    
- class="bg-dark text-center text-white">
+</body> class="bg-dark text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Form -->
