--- a/bacs200/trends/trends.html
+++ b/bacs200/trends/trends.html
@@ -124,7 +124,8 @@
 <br>
 </body>
     
-    <h2>    <img src="https://adamschott.github.io/bacs200/adamschott.jpg" alt="Adam Schott" width="250" height="300"></h2><br>
+    <h2>    <img src="https://adamschott.github.io/bacs200/adamschott.jpg" alt="Adam Schott" width="250" height="300"></h2>
+  <br>
 <br>
 
             
